@@ -116,11 +116,11 @@
     <li>reference pages in HTML format.</li>
   </ul>
 
-  <p>A tablelist widget is a multi-column listbox and tree widget.&nbsp; The
-  width of each column can be dynamic (i.e., just large enough to hold all its
-  elements, including the header) or static (specified in characters or
-  pixels).&nbsp; The columns are, per default, resizable.&nbsp; The alignment
-  of each column can be specified as <code>left</code>, <code>right</code>, or
+  <p>A tablelist is a multi-column listbox and tree widget.&nbsp; The width of
+  each column can be dynamic (i.e., just large enough to hold all its elements,
+  including the header) or static (specified in characters or pixels).&nbsp;
+  The columns are, per default, resizable.&nbsp; The alignment of each column
+  can be specified as <code>left</code>, <code>right</code>, or
   <code>center</code>.</p>
 
   <p>The columns, rows, and cells can be configured individually.&nbsp; Several
