@@ -1,6 +1,11 @@
 2010-06-05  Csaba Nemethi <csaba.nemethi@t-online.de>
 
-	* doc/tablelist.html:       Corrected a typo.
+	* README.txt:         Slightly extended.
+	* doc/tablelist.html:
+
+2010-06-05  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* doc/tablelist.html: Corrected a typo.
 
 2010-06-02  Csaba Nemethi <csaba.nemethi@t-online.de>
 
